--- a/plany/src/main/resources/application.properties
+++ b/plany/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 spring.application.name=Plany
 server.port:8081
+
+# Railway PostgreSQL Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=12345
-spring.datasource.url=jdbc:postgresql://localhost:5432/PlanyBD  
+spring.datasource.password=pAiBYcudZpLsxtirnCwPmiHzSPTVhlsn
+spring.datasource.url=jdbc:postgresql://yamanote.proxy.rlwy.net:40166/railway
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Configuración para ejecutar data.sql (desactivado temporalmente)
+# spring.jpa.defer-datasource-initialization=true
+# spring.sql.init.mode=always
