--- a/Dockerfile.render
+++ b/Dockerfile.render
@@ -1,5 +1,5 @@
 # Render-optimized Dockerfile for Plany
-FROM openjdk:17-jre-slim
+FROM eclipse-temurin:17-jre-jammy
 
 # Set working directory
 WORKDIR /app
