--- a/plany/src/main/resources/application.properties
+++ b/plany/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 spring.application.name=Plany
-server.port:8081
+server.port=${PORT:8081}
 
+# Use production profile by default for deployment
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
 
+# Railway PostgreSQL Database Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=pAiBYcudZpLsxtirnCwPmiHzSPTVhlsn
-spring.datasource.url=jdbc:postgresql://yamanote.proxy.rlwy.net:40166/railway
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:pAiBYcudZpLsxtirnCwPmiHzSPTVhlsn}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://yamanote.proxy.rlwy.net:40166/railway}
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
