Con el parcero kevin echando codigo

--- a/plany/src/main/resources/application-prod.properties
+++ b/plany/src/main/resources/application-prod.properties
@@ -1,29 +1,49 @@
 # Production Configuration for Render/Deployment
 spring.application.name=Plany
+
+# Server Configuration
 server.port=${PORT:8081}
 
-# Railway PostgreSQL Database Configuration
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:pAiBYcudZpLsxtirnCwPmiHzSPTVhlsn}
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://yamanote.proxy.rlwy.net:40166/railway}
+# Database Configuration (Railway PostgreSQL)
+spring.datasource.url=${SPRING_DATASOURCE_URL:${DATABASE_URL:jdbc:postgresql://yamanote.proxy.rlwy.net:40166/railway}}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${DB_USERNAME:postgres}}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${DB_PASSWORD:pAiBYcudZpLsxtirnCwPmiHzSPTVhlsn}}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:org.postgresql.Driver}
 
 # JPA Configuration
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM:org.hibernate.dialect.PostgreSQLDialect}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:false}
 spring.jpa.properties.hibernate.format_sql=false
 
 # Disable data.sql execution in production
 spring.jpa.defer-datasource-initialization=false
 spring.sql.init.mode=never
 
-# Logging
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate.SQL=WARN
+# Logging Configuration
+logging.level.org.springframework.web=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_WEB:INFO}
+logging.level.org.hibernate.SQL=${LOGGING_LEVEL_ORG_HIBERNATE_SQL:WARN}
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+logging.level.com.zaxxer.hikari=${LOGGING_LEVEL_COM_ZAXXER_HIKARI:INFO}
 
-# Performance
+# Performance Configuration
 spring.jpa.properties.hibernate.jdbc.batch_size=20
 spring.jpa.properties.hibernate.order_inserts=true
-spring.jpa.properties.hibernate.order_updates=true 
+spring.jpa.properties.hibernate.order_updates=true
+
+# CORS Configuration
+spring.web.cors.allowed-origins=${SPRING_WEB_CORS_ALLOWED_ORIGINS:*}
+spring.web.cors.allowed-methods=${SPRING_WEB_CORS_ALLOWED_METHODS:GET,POST,PUT,DELETE,OPTIONS}
+spring.web.cors.allowed-headers=${SPRING_WEB_CORS_ALLOWED_HEADERS:*}
+spring.web.cors.allow-credentials=true
+
+# Connection Pool Configuration
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+
+# Security Configuration (temporary for development)
+spring.security.user.name=admin
+spring.security.user.password=admin 
