--- a/Dockerfile.render
+++ b/Dockerfile.render
@@ -7,15 +7,16 @@ WORKDIR /app
 # Copy the built JAR file
 COPY plany/target/*.jar app.jar
 
-# Expose port (Render will override this)
+# Expose port (Render will override this with PORT env var)
 EXPOSE 8081
 
 # Set environment variables
 ENV JAVA_OPTS="-Xmx512m -Xms256m"
+ENV SPRING_PROFILES_ACTIVE=prod
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD curl -f http://localhost:${PORT:-8081}/actuator/health || exit 1
+  CMD curl -f http://localhost:${PORT:-8081}/ || exit 1
 
-# Run the application
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"] 
+# Run the application with proper profile activation
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Dspring.profiles.active=${SPRING_PROFILES_ACTIVE:-prod} -jar app.jar"] 
