--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -1,5 +1,5 @@
-# Simple Dockerfile for Plany - Spring Boot Application
-FROM amazoncorretto:21-alpine
+# Simple Dockerfile for Plany - Spring Boot Application (Render Optimized)
+FROM eclipse-temurin:21-jre-jammy
 
 # Set working directory
 WORKDIR /app
@@ -7,11 +7,16 @@ WORKDIR /app
 # Copy the built JAR file
 COPY plany/target/*.jar app.jar
 
-# Expose port
+# Expose port (Render will override this with PORT env var)
 EXPOSE 8081
 
 # Set environment variables
 ENV JAVA_OPTS="-Xmx512m -Xms256m"
+ENV SPRING_PROFILES_ACTIVE=prod
 
-# Run the application
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"] 
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD curl -f http://localhost:${PORT:-8081}/ || exit 1
+
+# Run the application with proper profile activation
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Dspring.profiles.active=${SPRING_PROFILES_ACTIVE:-prod} -jar app.jar"] 
