--- a/plany/pom.xml
+++ b/plany/pom.xml
@@ -5,9 +5,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <!-- **CAMBIO AQUÍ: Actualiza la versión de Spring Boot a 3.3.12** -->
-        <version>3.3.12</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>3.2.3</version>
+        <relativePath/>
     </parent>
     <groupId>co.plany</groupId>
     <artifactId>plany</artifactId>
