--- a/plany/src/main/resources/application-prod.properties
+++ b/plany/src/main/resources/application-prod.properties
@@ -4,7 +4,7 @@ spring.application.name=Plany
 # Server Configuration
 server.port=${PORT:8081}
 
-# Database Configuration (Railway PostgreSQL)
+# Database Configuration (Railway PostgreSQL) - Formato JDBC correcto
 spring.datasource.url=${SPRING_DATASOURCE_URL:${DATABASE_URL:jdbc:postgresql://yamanote.proxy.rlwy.net:40166/railway}}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${DB_USERNAME:postgres}}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${DB_PASSWORD:pAiBYcudZpLsxtirnCwPmiHzSPTVhlsn}}
